# clefd

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.org  clef.conf  config.scm  guix.scm  manifest.scm  prompt.org
.github/workflows/: coverage.yml
src/: chord_state.rs  clef.scm  clefd.c  clefd.rs  command_runner.rs  input.c  keybindings.rs  keyboard_client.rs  lib.rs  main.rs  main.scm  test.c  user_config.rs
