[package]
name = "clefd"
version = "0.1.0"
edition = "2021"

[dependencies]

# High-level, safe wrapper for libinput.
input = "0.8.3"

# Safe wrapper for libudev.
udev = "0.7.0"

# Bindings for libxkbcommon.
xkbcommon = "0.7.0"

# For handling signals like SIGINT and SIGTERM gracefully.
signal-hook = "0.3.17"
signal-hook-tokio = "0.3.1"

# Async runtime to handle signals.
tokio = { version = "1", features = ["full"] }

# Error handling.
anyhow = "1.0.75"

[[bin]]
name = "clefd"
path = "src/clefd.rs"