[package]
name = "clefd"
version = "0.1.0"
edition = "2021"

[dependencies]

# High-level, safe wrapper for libinput.
input = "0.8.3"

# Safe wrapper for libudev.
udev = "0.7.0"

# Bindings for libxkbcommon.
xkbcommon = "0.7.0"

# For handling signals like SIGINT and SIGTERM gracefully.
signal-hook = "0.3.17"
signal-hook-tokio = "0.3.1"

# Async runtime to handle signals.
tokio = { version = "1", features = ["full"] }

# Error handling.
anyhow = "1.0.75"

dirs = "6.0.0"
log = "0.4.27"
env_logger = "0.11.8"
notify = "8.1.0"
clap = { version = "4.5.41", features = ["derive"] }
tempfile = "3.20.0"
